<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginEnd="20dp"
    android:background="@android:color/transparent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingRight="15dp"
            android:paddingEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialogRevenueTitle"
                android:text="@string/add_revenue"
                android:textAllCaps="true"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dialog_title_text_size"
                android:fontFamily="@font/robotoblack"
                android:textColor="@color/dialog_title"
                android:letterSpacing="0.1"
                android:gravity="center_horizontal"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/description"
                app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
                app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionTextInputField"
                    android:textSize="14sp"
                    android:textColor="@color/greyish_brown"
                    android:fontFamily="@font/circularstdbook"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_edit_text_height" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/value"
                app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
                app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/valueTextInputField"
                    android:textSize="14sp"
                    android:textColor="@color/greyish_brown"
                    android:fontFamily="@font/circularstdbook"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_edit_text_height" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/paidCheckBox"
                android:layout_marginBottom="20dp"
                android:textSize="14sp"
                android:textColor="@color/greyish_brown"
                android:fontFamily="@font/circularstdbook"
                android:text="@string/revenue_has_been_reclaimed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:text="@string/cancel"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/circularstdbold"
            app:cornerRadius="@dimen/button_corner_radius"
            app:backgroundTint="@color/red"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            android:visibility="gone"
            android:text="@string/delete"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/circularstdbold"
            app:cornerRadius="@dimen/button_corner_radius"
            app:backgroundTint="@color/red"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addRevenueButton"
            android:text="@string/add"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/circularstdbold"
            app:cornerRadius="@dimen/button_corner_radius"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateRevenueButton"
            android:visibility="gone"
            android:text="@string/update"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/circularstdbold"
            app:cornerRadius="@dimen/button_corner_radius"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height" />

    </LinearLayout>

</LinearLayout>